# Game_of_life_wbo

./: .gitignore  CMakeLists.txt  Makefile  README.md  board_result  previous_state_output.txt  resultado.in  run_script.sh  save_result.sh  solve_game_of_life.sh  wbo_solution.txt
entradas/: 123.txt  vintecinco.txt
open-wbo/: Makefile  output.cnf
open-wbo-master/open-wbo-master/: SATinput.txt  old1_output.cnf  old2_output.cnf  test_prof.wcnf
patterns/: 123.txt  resultado.txt
src/: field.cpp  field.h  formula.cpp  formula.h  futureState.cpp  futureState.h  initialState.cpp  initialState.h  leiame.txt  main.cpp  pattern.cpp  pattern.h  print_board_result.cpp  satSolver.cpp  satSolver.h
